--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>погода</title>
+		<title>Погода</title>
 	</head>
 	<body>
 		<slot />
@@ -13,10 +13,15 @@
 </html>
 
 <style>
-	html,
-	body {
+	* {
 		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+	body {
+		display: flex;
+		flex-direction: column;
+		height: 100dvh;
 		width: 100%;
-		height: 100%;
 	}
 </style>
