--- a/src/pages/ulsk.astro
+++ b/src/pages/ulsk.astro
@@ -1,7 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro"
+import Header from "../components/Header.svelte"
+import Footer from "../components/Footer.svelte"
 ---
 
 <Layout>
-    
+    <Header client:load />
+    <div>
+        <h1>Ульяновск</h1>
+    </div>
+    <Footer client:load />
 </Layout>
